# btftp_example

./: README.md  meson.build
data/: com.vizio.btftp_example.appdata.xml.in  com.vizio.btftp_example.desktop.in  com.vizio.btftp_example.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  btftp_example.gresource.xml  main.vala  meson.build  obex.vala  window.ui  window.vala
